--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Quantified Health</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_benchmark">BenchmarkActivity</string>
+    <string name="healthdata">Health Data</string>
+    <string name="activity">Activity</string>
+    <string name="nutrition">Nutrition</string>
+    <string name="mental">Mental</string>
 </resources>
