--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quantified Health</string>
+    <string name="app_name">Fiora</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_benchmark">Health Benchmark</string>
     <string name="healthdata">Health Data</string>
