--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,6 +205,7 @@
     </string-array>
 
     <string name="btn_questionaire_done">"Done"</string>
+    <string name="title_activity_home">HomeActivity</string>
 
 
 </resources>
